# ascii-video-terminal

./: .gitignore  README.md  main.py  pyproject.toml  save_frames_example.py
saved_frames/chodan/: frame_000000.txt  frame_000003.txt  frame_000006.txt  frame_000007.txt  frame_000008.txt  frame_000009.txt  frame_000013.txt  frame_000017.txt  frame_000018.txt  frame_000022.txt  frame_000023.txt  frame_000024.txt  frame_000025.txt  frame_000027.txt  frame_000028.txt  frame_000029.txt  frame_000030.txt  frame_000031.txt  frame_000032.txt  frame_000034.txt  frame_000035.txt  frame_000038.txt  frame_000039.txt  frame_000041.txt  frame_000042.txt  frame_000043.txt  frame_000044.txt  frame_000046.txt  frame_000048.txt  frame_000053.txt  frame_000055.txt  frame_000058.txt  frame_000061.txt  frame_000065.txt  frame_000067.txt  frame_000068.txt  frame_000069.txt  frame_000070.txt
saved_frames/overdrive/: frame_000000.txt  frame_000003.txt  frame_000004.txt  frame_000005.txt  frame_000006.txt  frame_000007.txt  frame_000008.txt  frame_000009.txt  frame_000010.txt  frame_000011.txt  frame_000012.txt  frame_000013.txt  frame_000014.txt  frame_000015.txt  frame_000017.txt  frame_000018.txt  frame_000020.txt  frame_000021.txt  frame_000022.txt  frame_000023.txt  frame_000025.txt  frame_000026.txt  frame_000027.txt  frame_000028.txt  frame_000029.txt  frame_000030.txt  frame_000034.txt  frame_000035.txt  frame_000036.txt  frame_000038.txt  frame_000039.txt  frame_000040.txt  frame_000041.txt  frame_000044.txt  frame_000045.txt  (+28 more)
video_to_ascii/: cli.py  player.py  video_engine.py
(+2191 files in other folders)
