[project]
name = "ascii-terminal"
version = "0.1.0"
description = "ðŸ¦ Bringing animated parrots to terminals everywhere (Python implementation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "colorama>=0.4.6",
    "pip>=25.2",
    "ffmpeg>=1.4",
    "opencv-python>=4.12.0.88",
    "xtermcolor>=1.3",
]
